Działająca wersja na komórce

--- a/Zaczy.SongBook.WPF/appsettings.json
+++ b/Zaczy.SongBook.WPF/appsettings.json
@@ -3,8 +3,8 @@
     "SongBookDb": "Server=localhost;Database=songbook;User=songbook;Password=Qaz43210;"
   },
   "Settings": {
-    "ApiBaseUrl": "http://zaczy-api.local/api",
-    "ApiBaseUrlPROD": "https://api.zaczy.net/api"
+    "ApiBaseUrl": "https://api.zaczy.net/api",
+    "ApiBaseUrlLOC": "http://zaczy-api.local/api"
   },
   "Logging": {
     "LogLevel": {
